force-app/main/default/objects/Ticket__c/Ticket__c.object-meta.xml
<CustomObject>
    <description>Object to store help desk tickets (training requests, user management, and other requests) submitted by users on the platform.</description>
    <label>Ticket</label>
    <nameField>
        <displayFormat>Ticket-{0000}</displayFormat>
        <label>Ticket Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tickets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>