force-app/main/default/objects/Ticket__c/fields/ContactName__c.field-meta.xml
<CustomField>
    <fullName>ContactName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who should our team contact regarding this ticket?</description>
    <inlineHelpText>Who is this ticket assigned to?</inlineHelpText>
    <label>Contact Name</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipName>Help Desk Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>