force-app/main/default/objects/Ticket__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <description>Add summary details for the ticket. For example: record error, feature request, etc.</description>
    <inlineHelpText>Add summary details for the ticket. For example: record error, feature request, etc.</inlineHelpText>
    <label>Details</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>