force-app/main/default/objects/Ticket__c/fields/ExpectedOutcome__c.field-meta.xml
<CustomField>
    <fullName>ExpectedOutcome__c</fullName>
    <description>What outcome is expected as a result of this change?</description>
    <inlineHelpText>What was the outcome that you expect as a result of this change?</inlineHelpText>
    <label>Expected Outcome</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>