force-app/main/default/objects/Ticket__c/fields/StepstoReproduce__c.field-meta.xml
<CustomField>
    <fullName>StepstoReproduce__c</fullName>
    <description>Steps for our team to reproduce the issue.</description>
    <inlineHelpText>How can our team reproduce the issue?</inlineHelpText>
    <label>Steps to Reproduce</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>