force-app/main/default/objects/Ticket__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>What is the nature of this issue?</description>
    <inlineHelpText>What is the nature of this issue?</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>User Creation or Deactivation</fullName>
                <default>true</default>
                <label>User Creation or Deactivation</label>
            </value>
            <value>
                <fullName>Question</fullName>
            </value>
            <value>
                <fullName>Feature Request</fullName>
            </value>
            <value>
                <fullName>Training Request</fullName>
            </value>
            <value>
                <fullName>Record or Object Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>