force-app/main/default/objects/Ticket__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AssignedTo__c</columns>
    <columns>Details__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Type__c</columns>
    <columns>Priority__c</columns>
    <columns>ReportedRecord__c</columns>
    <columns>ReportedObject__c</columns>
    <columns>StepstoReproduce__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>